# korea-apt-index

./: .gitignore  README.md
backend/: .env.example  .gitignore  app.py  app2.py  data_migration.py  insert_data.py  main.py  out.txt  pyproject.toml  seoul.txt  test.ipynb  test.py  verify_data.py
backend/data/: apt_price_20260408.xlsx
backend/database/: 01_schema.sql
backend/notebooks/: 01_monthly_apt_trend.ipynb  seoul_apt_map.html
docs/: ERD.md  FRONTEND_ARCHITECTURE.md  PROJECT_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/ranking/: page.tsx
frontend/src/app/(app)/trend/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/map/: page.tsx
frontend/src/app/(dashboard)/ranking/: page.tsx
frontend/src/app/(dashboard)/trend/: page.tsx
frontend/src/components/charts/: RankingChart.tsx  TrendLineChart.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/map/: KoreaHeatMap.tsx
frontend/src/components/ranking/: MarketRankingTable.tsx
frontend/src/components/trend/: TrendAnalysisContainer.tsx
frontend/src/components/ui/: StatCard.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
